update covid info

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1513,3 +1513,25 @@ input:read-only {
 .icon-health {
 	padding-top: 30px;
 }
+
+.alert.alert-server {
+	margin-bottom: 0;
+	border-radius: 0;
+	position: relative;
+	top: 73px;
+	z-index: 100;
+}
+
+@media only screen and (max-width: 600px) {
+	.alert.alert-server {
+		margin-bottom: 0;
+		border-radius: 0;
+		top: 65px;
+	}
+}
+
+.affix {
+    top: 0;
+    width: 100%;
+    z-index: 9999 !important;
+  }
