--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1232,7 +1232,6 @@ input.search-field {
 
 .rsvp {
 	position: relative;
-	padding: 8.25rem 0;
 }
 
 .rsvp:after {
@@ -1516,9 +1515,11 @@ input:read-only {
 }
 
 .alert.alert-server {
+	position: relative;
 	margin-bottom: 0;
 	border-radius: 0;
 	top: 73px;
+	z-index: 1;
 }
 
 @media only screen and (max-width: 600px) {
@@ -1526,10 +1527,5 @@ input:read-only {
 		margin-bottom: 0;
 		border-radius: 0;
 		top: 65px;
-	}
-
-	.rsvp 
-	{
-		padding: 10.25rem 0;
 	}
 }
